samples/_failures_safe/1761507499_eae1bf_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d2f9180e.c: In function ‘main’:
./samples/SAFE/__tmp_d2f9180e.c:156:5: error: expected declaration or statement at end of input
  156 |     process_text(&processor, input);
      |     ^~~~~~~~~~~~
